src/styles/game.css
@import './variables.css';

body:has(.game-main) {
    --darkness: 0.5;
}

.game-main {
    flex: 1;
    display: flex;
    align-items: center;

    & > * {
        flex: 1;
    }
}

.game-header,
.collections-header {
    justify-content: space-between;
    font-size: 2rem;
    padding: 0.8em 0;
    gap: 0.4em;
}

.game-header > *,
.collections-header > * {
    flex: 1;
    text-align: center;
}

.card-container {
    display: grid;
    grid-template-columns: repeat(
        auto-fill,
        minmax(clamp(130px, 14.5svw, 16%), 1fr)
    );
    gap: 1em;
    margin: 2em auto;
    margin-top: 0;
}

.card {
    --border-radius: 10px;

    background-color: var(--clr-card-background);
    opacity: 0.8;
    border: 1px solid black;
    padding: 0.5em;
    clip-path: var(--clip-path);
}

.card {
    user-select: none;
    -webkit-user-drag: none;
}

.card__img-container {
    aspect-ratio: 1;
    background-color: var(--clr-card-foreground);
    margin-bottom: 1em;
    display: flex;
    justify-content: center;
    align-items: center;
    clip-path: inherit;
}

.card__img {
    width: 70%;
    aspect-ratio: 1;
    object-fit: contain;
}

.card__name {
    text-align: center;
    font-size: clamp(1rem, 1svw, 4rem);
}

.game-end-backdrop {
    position: fixed;
    inset: 0;
    background-color: rgba(0, 0, 0, 0.6);
    z-index: 1000;
    display: flex;
    justify-content: center;
    align-items: center;
}

.game-end.lose {
    background:
        linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.25)),
        url('/corruption-background.webp');
}

.game-end.win {
    background:
        linear-gradient(rgba(0, 0, 0, 0.5)), url('/hallow-background.png');
}

.game-end {
    width: min(90%, 800px);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 3em 0;
    font-size: 3rem;
    background-color: var(--clr-card-foreground);
    clip-path: var(--clip-path);
    background-size: cover;
    background-position: center center;
    background-attachment: fixed;
    background-repeat: no-repeat;
    image-rendering: pixelated;
}

@media (width <= 576px) {
    .game-header,
    .collections-header {
        font-size: 1.2rem;
    }

    .game-end {
        font-size: 1.5rem;
    }
}

@media (hover: hover) and (pointer: fine) {
    .card:hover {
        transform: translateY(-5px);
    }

    button:hover {
        color: var(--clr-text-hover);
    }
}

